# PPOCore3D

./: CMakeLists.txt  TODO.txt  instructions.txt
data/: humanoid.urdf
include/minitaur/: RobotSimulator.cpp  RobotSimulator.h
lib/Debug/: Bullet2FileLoader_Debug.lib  Bullet3Collision_Debug.lib  Bullet3Common_Debug.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry_Debug.lib  BulletFileLoader_Debug.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  BulletRoboticsGUI_Debug.lib  BulletWorldImporter_Debug.lib  BulletXmlWorldImporter_Debug.lib  BussIK_Debug.lib  ConvexDecomposition_Debug.lib  GIMPACTUtils_Debug.lib  LinearMath_Debug.lib  OpenGLWindow_Debug.lib  clsocket_Debug.lib
lib/Release/: Bullet2FileLoader.lib  Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  BulletExampleBrowserLib.lib  BulletFileLoader.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletRoboticsGUI.lib  BulletSoftBody.lib  BulletWorldImporter.lib  BulletXmlWorldImporter.lib  BussIK.lib  ConvexDecomposition.lib  GIMPACTUtils.lib  HACD.lib  LinearMath.lib  OpenGLWindow.lib  clsocket.lib  gtest.lib  gwen.lib
src/: Grapher.h  Manipulator.h  env.cpp  env.h  main.cpp  ppo.cpp  ppo.h
src/envs/: AgentTargetEnv.h  HumanStandEnv.h  HumanoidEnv.h  PendulumEnv.h  RobotEnv.h
